<resources>
    <string name="app_name" translatable="false">Mugen</string>

    <!--    jikan error message's-->
    <string name="error_cache_modification">You have the latest data</string>
    <string name="error_invalid_request">You\'ve made an invalid request</string>
    <string name="error_request_refresh_page">Please try refreshing</string>
    <string name="error_login_again">Please try login again</string>
    <string name="error_resource_not_found">The resource was not found</string>
    <string name="error_only_get_request_allowed">Requested Method is not supported for resource</string>
    <string name="error_internal_server">Internal Server Error</string>
    <string name="error_internet_unavailable">Internet unavailable!</string>
    <string name="error_network_failure">Network Failure</string>
    <string name="error_conversion_error">Conversion Error</string>
    <string name="error_maintenance">MAL servers are currently under maintenance</string>
    <string name="error_something_went_wrong">Something went wrong</string>

    <!--    clickable texts-->
    <string name="action_see_all">See all</string>
    <string name="action_next">Next</string>
    <string name="action_submit">Submit</string>
    <string name="action_read_more">Read more</string>
    <string name="action_read_less">Read less</string>
    <string name="action_add_to_list">Add To List</string>
    <string name="action_watch_now">Watch Now</string>
    <string name="action_apply">Apply</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_details">Details</string>
    <string name="action_explore">Explore</string>

    <string name="msg_default">Default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="hindi_native">Hindi</string>
    <string name="japanese_native">Japanese</string>
    <string name="english_native">English</string>

    <string name="msg_more">More</string>
    <string name="msg_manga">Manga</string>
    <string name="msg_anime">Anime</string>
    <string name="msg_spotlight">Spotlight</string>
    <string name="msg_top_favourite">Top Favourite</string>
    <string name="msg_most_popular">Most Popular</string>
    <string name="msg_upcoming">Upcoming</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="msg_copied">Copied To Clipboard!</string>
    <string name="msg_login">Login</string>
    <string name="msg_login_des">To access your MAL preferences you have to login with MAL account.</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_use_external_browser">Use External Browser</string>
    <string name="msg_my_profile">My Profile</string>
    <string name="msg_my_anime_list">My Anime List</string>
    <string name="msg_my_manga_list">My Manga List</string>
    <string name="msg_settings">Settings</string>
    <string name="msg_logout">Logout</string>
    <string name="msg_login_to_access_des">Login to Access</string>
    <string name="msg_logout_des">You will have to login again to access some features.</string>
    <string name="msg_okay">Okay</string>
    <string name="msg_top_recommended">Top Recommended</string>
    <string name="msg_top_ranked">Top Ranked</string>
    <string name="msg_language">Language</string>
    <string name="msg_app_theme">App Theme</string>
    <string name="msg_sfw">SFW (Safe for work)</string>
    <string name="msg_title_language">Title Language</string>
    <string name="msg_sfw_description">If enabled, this feature ensures content is safe by filtering out potentially sensitive or explicit material. (This feature is still in beta.)</string>
    <string name="msg_language_description">Select preferred app language</string>
    <string name="msg_title_lang_description">Select preferred title language\n(this doesn\'t depend on app language)</string>
    <string name="msg_theme_description">Select the app theme you like</string>
    <string name="msg_my_manga_description">See all the manga you saved on MAL</string>
    <string name="msg_my_anime_description">See all the anime you saved on MAL</string>
    <string name="msg_mal_profile_decription">View your MAL profile</string>

    <!--    empty list title and description-->
    <string name="msg_your_list_empty">Your list is empty</string>
    <string name="msg_empty_manga_list_des">Oops! It seems you haven\'t added any manga to the list.</string>
    <string name="msg_empty_anime_list_des">Oops! It seems you haven\'t added any anime to the list.</string>
    <string name="msg_list_empty">Oops! List is empty</string>
    <string name="msg_empty_list_des">It looks like we haven\'t found any data. Please try different filters.</string>
    <string name="msg_seach_list_empty">No results!</string>
    <string name="msg_empty_seach_list_des">Please try different search.</string>
    <string name="msg_empty_error_des">Oops! It seems we\'ve run into some error.</string>

    <string name="msg_choose_app_theme">Choose App Theme</string>
    <string name="msg_choose_app_language">Choose App Language</string>
    <string name="msg_choose_title_language">Choose Title Language</string>
    <string name="msg_logout_description">Only from within the app, you will still be logged into MAL.</string>
    <string name="msg_rating">Rating</string>
    <string name="msg_episode">Episode</string>
    <string name="msg_episodes">Episodes</string>
    <string name="msg_chapter">Chapter</string>
    <string name="msg_chapters">Chapters</string>
    <string name="msg_volume">Volume</string>
    <string name="msg_volumes">Volumes</string>
    <string name="msg_status">Status</string>
    <string name="msg_sort_by">Sort By</string>
    <string name="msg_filter_by_status">Filter By Status</string>
    <string name="msg_choose_status">Choose Status</string>
    <string name="msg_filter_by_type">Filter By Type</string>
    <string name="msg_filter_by_age">Filter By Age</string>
    <string name="msg_top_anime">Top Anime</string>
    <string name="msg_choose_age_rating">Choose Age Rating</string>
    <string name="msg_choose_type">Choose Type</string>
    <string name="msg_page">Page</string>
    <string name="msg_previous">Previous</string>
    <string name="msg_enter_page">Enter Page No.</string>
    <string name="msg_between">Between</string>
    <string name="msg_only_single_page">Only Single Page Available</string>
    <string name="msg_invalid_range">Please enter a number in the given range.</string>
    <string name="msg_filter_by">Filter By</string>
    <string name="msg_to">To</string>
    <string name="msg_per_ep" translatable="false">/Ep</string>
    <string name="msg_background_colon">Background:</string>
    <string name="msg_synopsis_colon">Synopsis:</string>
    <string name="msg_stats">Stats</string>
    <string name="msg_rank">Rank</string>
    <string name="msg_popularity">Popularity</string>
    <string name="msg_scored_by">Scored By</string>
    <string name="msg_members">Members</string>
    <string name="msg_favourites">Favourites</string>
    <string name="msg_more_info">More Info</string>
    <string name="msg_romaji_colon">Romaji:</string>
    <string name="msg_english_colon">English:</string>
    <string name="msg_japanese_colon">Japanese:</string>
    <string name="msg_others_colon">Others:</string>
    <string name="msg_aired_on_colon">Aired on:</string>
    <string name="msg_status_colon">Status:</string>
    <string name="msg_show_type_colon">Show type:</string>
    <string name="msg_broadcast_colon">Broadcast:</string>
    <string name="msg_source_colon">Source:</string>
    <string name="msg_studios_colon">Studios:</string>
    <string name="msg_producers_colon">Producers:</string>
    <string name="msg_licensors_colon">Licensors:</string>
    <string name="msg_rated_colon">Rated:</string>
    <string name="msg_recommended">Recommended</string>
    <string name="msg_reviews">Reviews</string>
    <string name="msg_reviewed_on">Reviewed on</string>
    <string name="msg_preliminary">Preliminary</string>
    <string name="msg_spoiler">Spoiler</string>
    <string name="msg_empty_recommendations_list_des">There aren\'t any recommendations related to this anime.</string>
    <string name="msg_empty_review_list_des">It looks like reviews haven\'t been posted.</string>
    <string name="msg_no_more_reviews">There aren\'t any more reviews.</string>
    <string name="msg_search_anime">Search Anime</string>
    <string name="msg_genres">Genres</string>
    <string name="msg_search_manga">Search Manga</string>
    <string name="msg_restart_app_description">Restart the app to see the changes.</string>
    <string name="msg_restart_now">Restart Now</string>
    <string name="msg_opening_themes">Opening Themes</string>
    <string name="msg_ending_themes">Ending Themes</string>
    <string name="msg_filter">Filter</string>
    <string name="msg_year">Year</string>
    <string name="msg_select_date">Select Date</string>
    <string name="msg_order_by">Order By</string>
    <string name="msg_start_year">Start Year</string>
    <string name="msg_end_year">End Year</string>
    <string name="msg_select_year">Select Year</string>
    <string name="msg_search_bar_des">Search by - \'Death Note\' or \'d\'</string>
    <string name="msg_not_authenticated">Not Authenticated</string>
    <string name="msg_not_authenticated_des">Please login to access this feature.</string>
    <string name="msg_genres_details">Genre Details</string>
    <string name="msg_filter_by_genre">Filter By Genre</string>
    <string name="msg_manga_mode">Manga Mode</string>
    <string name="msg_manga_mode_description">Switches all content from anime to manga.</string>

</resources>