<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/bg_year_picker"
            android:gravity="top">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleFont700"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:elevation="@dimen/_8sdp"
                android:gravity="center"
                android:text="@string/msg_year"
                android:textColor="@color/onAccent"
                android:textSize="@dimen/text_size_22" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <NumberPicker
                android:id="@+id/picker_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:descendantFocusability="blocksDescendants"
                android:visibility="gone"
                tools:ignore="RtlCompat" />

            <NumberPicker
                android:id="@+id/picker_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                style="@style/CustomAccentButton"
                android:text="@string/msg_cancel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_okay"
                style="@style/CustomAccentButton"
                android:text="@string/msg_okay" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>